--- a/priv/static/slides/index.html
+++ b/priv/static/slides/index.html
@@ -1080,8 +1080,8 @@ section.title footer {
   justify-content: start;
 }
 ;">
-<h3>Principles</h3>
-<h1>Why is this better?</h1>
+<h3>Why is this better?</h3>
+<h1>Exposes the state of things to the user</h1>
 <footer><img src="images/launchscout-logo.png" alt="image" /></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-footer="![image](images/launchscout-logo.png)" data-style="
@@ -1318,7 +1318,9 @@ So this talk is a little bit tactical and little bit strategic. It's built on pr
 
 With that in mind, let's talk about the principles through some common problems for realtime apps.</p></div><div class="bespoke-marp-note" data-index="5" tabindex="0"><p>(Katie)
 
-The first problem we want to highlight today is the problem of scarce resources. Or maybe in more familiar terms, things like inventory management and out of stock situations. There is a reality for most e-commerce sites, that customers are interacting with digital representations of a physical inventory. And that means there is a constraint, or a limit, to the number of items that can actually be sold. Take event tickets as an example. There is a limit to the number of tickets that can be sold for an event because there is a physical limit to the number of people who can attend that event. And it is our job as designers and developers to make sure customers have the right information at the right time to make informed decisions about that buying process.</p></div><div class="bespoke-marp-note" data-index="6" tabindex="0"><p>Tim
+The first problem we want to highlight today is the problem of scarce resources. Or maybe in more familiar terms, things like inventory management and out of stock situations. There is a reality for most e-commerce sites, that customers are interacting with digital representations of a physical inventory. And that means there is a constraint, or a limit, to the number of items that can actually be sold. Take event tickets as an example. There is a limit to the number of tickets that can be sold for an event because there is a physical limit to the number of people who can attend that event. And it is our job as designers and developers to make sure customers have the right information at the right time to make informed decisions about that buying process.
+
+So let's take a look at what that may look like.</p></div><div class="bespoke-marp-note" data-index="6" tabindex="0"><p>Tim
 
 Perhaps this is a good time to let you know that we're going to demonstrate the problems and solutions using an actual running webapp embedded in the slides. We spent quite a bit of time bending the markdown slide tool and the web app to our collective will, but there's always a risk that we messed up the tribute to the demo gods this morning. If that happens, things just get a little more... entertaining.
 
@@ -1334,7 +1336,7 @@ Ok so let's talk problems. You probably see the most obvious ones. There's a fru
 
 Those are all problems, for sure, but they're tactical problems about the system or create process problems outside of the system. I want to take us a little deeper and ask you all  put on your empathy hats, and think about how this is affecting the customer's **experience**. You have two people who are both trying to buy the same thing. They both add it to their cart and one gets distracted or something comes up and they decide they'll check out later. In the meantime, the other makes a decision and the item goes out of stock. Now, the first person comes back to the page and it still looks like the item is available and then they get hit with an error, seemingly out of nowhere. The person who ended up not being able to purchase the scarf may feel a sense of betrayal or frustration. The entire time while shopping, they had no reason to believe that they should have acted faster.
 
-Maybe they were wanting to buy that scarf as a birthday present for their grandmother. And if they had known it was the last one, they would have acted faster. Or if they had known they only had a certain amount of time to keep that item in their cart, they would have made a different decision. Now, because we didn't provide the user with accurate, realtime information, We've now created a problem for the user that they could have avoided had they been able to make an informed decision.
+Maybe they were wanting to buy that scarf as a birthday present for their grandmother. And if they had known it was the last one, they would have acted faster. Or if they had known they only had a certain amount of time to keep that item in their cart, they would have made a different decision. Now, because we didn't provide the user with accurate, realtime information, We've now created a problem for the user that they could have avoided had they had all the information when they needed it.
 
 So, while the solution prevents a system problem of two people purchasing the same item, it actually ignores the people problem that it creates by not allowing them to make informed decisions based on accurate information.  
 
@@ -1342,7 +1344,9 @@ So what does a better solution look like?</p></div><div class="bespoke-marp-note
 
 Drive the demo of the cart that improves the experience</p></div><div class="bespoke-marp-note" data-index="9" tabindex="0"><p>(Katie)
 
-Why is this better? While there is still a bit of a race condition in that someone's &quot;Add to Cart&quot; button is disabled when they may be moving their cursor to click it, they at least are not able to to move forward in that process under false pretenses. Think of it as two people reaching for the same item on a shelf at the store. And while that may be awkward or frustrating and even rude, you at least know immediately that you can't get the thing that you were reaching for, so you go look for something else. We're mimicking reality in this situation and letting users know the information as we know it so that they can make an informed decision.</p></div><div class="bespoke-marp-note" data-index="10" tabindex="0"><p>How many of you have been in the middle of reading a post or an article on the internet in a feed and had some late breaking new information come in and push down the content you were reading?
+Why is this better? While there is still a bit of a race condition in that someone's &quot;Add to Cart&quot; button is disabled when they may be moving their cursor to click it, they at least are not able to to move forward in that process under false pretenses. Think of it as two people reaching for the same item on a shelf at the store. And while that may be awkward or frustrating and even rude, you at least know immediately that you can't get the thing that you were reaching for, so you go look for something else.
+
+We're mimicking reality in this situation and letting users know the information as we know it so that they are aware of what they're actually able to do in the system.</p></div><div class="bespoke-marp-note" data-index="10" tabindex="0"><p>How many of you have been in the middle of reading a post or an article on the internet in a feed and had some late breaking new information come in and push down the content you were reading?
 
 You're on an ecommerce site, you find an item that you want to buy that's in high demand, and in between the time you add it to your cart and go to checkout, the item has gone out of stock.</p></div><div class="bespoke-marp-note" data-index="11" tabindex="0"><p>(Tim)
 
