Style post examples

--- a/priv/static/slides/index.html
+++ b/priv/static/slides/index.html
@@ -3028,11 +3028,11 @@ section.closing footer {
   padding-bottom: 2rem;
 }
 ;">
-<div style="display: flex; justify-content: normal; align-items: center; margin-bottom: 0;">
+<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0;">
   <h2 style="padding-right: 150px; padding-bottom: 30px;">Example</h2>
-  <iframe style="width: 43%; height: 4rem; border: none;" src="/social/rate_intensity"></iframe>
+  <iframe style="height: 4rem; border: none;" src="/social/rate_intensity"></iframe>
 </div>
-<iframe style="width:45%; height: 50rem; border: 3px solid lightgray; border-radius: 10px;" src="/social/posts"></iframe>
+<iframe style="width: 45%; height: 50rem; border: 3px solid lightgray; border-radius: 10px;" src="/social/posts"></iframe>
 <footer><img src="images/launchscout-logo.png" alt="image" /></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-footer="![image](images/launchscout-logo.png)" data-style="
@@ -3434,7 +3434,7 @@ section.closing footer {
 ;">
 <div style="display: flex; justify-content: space-between; align-items: center;">
   <h2>One potential solution</h2>
-  <iframe style="width:25%; height:3rem; border: none;" src="/social/rate_intensity"></iframe>
+  <iframe style="height:3rem; border: none;" src="/social/rate_intensity"></iframe>
 </div>
 <div style="display: flex; gap: 1rem;">
   <iframe style="display:inline-block; float:left; width:45%; height:30rem; border: 3px solid lightgray; border-radius: 10px;" src="/social/posts" frameBorder="1"></iframe>
@@ -4862,7 +4862,7 @@ Segue into the takeaway and intros
 
 Katie
 
-Hi! My name is Katie Pohlman and I am a Principal UX Designer at Launch Scout. Launch Scout is a custom software development agency based in Cincinnati, OH. And we build custom web applications for our clients. My role there, as a Principal UX Designer, is two fold—as a member of the Principal Group, I am helping to grow and improve our team's skillset and helping to shape and define what it means to deliver well on projects at Launch Scout. As a UX Designer, I am leading the UX and UI design and then implementing those designs with HTML and CSS. So, I am on the front-end of things, and I'll let Tim introduce himself. 
+Hi! My name is Katie Pohlman and I am a Principal UX Designer at Launch Scout. Launch Scout is a custom software development agency based in Cincinnati, OH. And we build custom web applications for our clients. My role there, as a Principal UX Designer, is two fold—as a member of the Principal Group, I am helping to grow and improve our team's skillset and helping to shape and define what it means to deliver well on projects at Launch Scout. As a UX Designer, I am leading the UX and UI design and then implementing those designs with HTML and CSS. So, I am on the front-end of things, and I'll let Tim introduce himself.
 
 Tim
 VP of Engineering and Delivery
